# ros2-go2-nav2-yolo

./: .gitignore  LICENSE  README.md  RESULTS.md  YOLO_TRAINING_PLAN.md  go2_sim_env.sh  requirements.txt
.github/workflows/: ci.yml
docs/: RESULTS_TEMPLATE.md
evaluation/: benchmark_yolo.py  nav_benchmark.py
evaluation/results/: yolo_benchmark.json
go2_description/: CMakeLists.txt
go2_description/xacro/: accessories.urdf.xacro  camera.xacro  const.xacro  go2_robot.xacro  hokuyo_utm30lx.urdf.xacro  xacro_no_decl.sh  xacro_strip_decl.sh
go2_yolo_bringup/: CMakeLists.txt  package.xml
go2_yolo_bringup/config/: detector_params.yaml  gait.yaml  nav2_params.yaml  slam_params.yaml
go2_yolo_bringup/launch/: advanced_demo_launch.py  gazebo_launch.py  navigation_launch.py  real_robot_launch.py  yolo_nav_launch.py
go2_yolo_bringup/scripts/: demo_scenario.py  scan_relay.py
go2_yolo_bringup/worlds/: advanced_demo_world.world  demo_world.world
go2_yolo_detector/: package.xml  setup.py
go2_yolo_detector/go2_yolo_detector/: agent_manager.py  detector_node.py  multi_agent_sim_detector.py  sim_person_detector.py  target_predictor.py
go2_yolo_detector/scripts/: agent_manager  detector_node  multi_agent_sim_detector  sim_person_detector  target_predictor
go2_yolo_msgs/: CMakeLists.txt  package.xml
go2_yolo_msgs/msg/: DetectedObject.msg  DetectedObjectArray.msg
go2_yolo_navigator/: package.xml  setup.py
go2_yolo_navigator/go2_yolo_navigator/: navigator_node.py
go2_yolo_navigator/scripts/: navigator_node
install/: local_setup.sh  setup.sh
install/go2_description/share/go2_description/: package.sh
install/go2_description/share/go2_description/cmake/: go2_descriptionConfig.cmake
install/go2_description/share/go2_description/xacro/: go2_robot.xacro
install/go2_yolo_bringup/share/ament_index/resource_index/package_run_dependencies/: go2_yolo_bringup
install/go2_yolo_bringup/share/ament_index/resource_index/parent_prefix_path/: go2_yolo_bringup
install/go2_yolo_bringup/share/go2_yolo_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/go2_yolo_bringup/share/go2_yolo_bringup/cmake/: go2_yolo_bringupConfig.cmake
install/go2_yolo_bringup/share/go2_yolo_bringup/config/gait/: gait.yaml
install/go2_yolo_bringup/share/go2_yolo_bringup/launch/: gazebo_launch.py  yolo_nav_launch.py
install/go2_yolo_bringup/share/go2_yolo_bringup/rviz/: go2_nav2_yolo.rviz
log/: latest_build
training/: augment_dataset.py  auto_label.py  collect_frames.py  export_model.sh  record_session.py  train.sh
