<?xml version="1.0"?>
<package format="3">
  <name>go2_yolo_bringup</name>
  <version>0.1.0</version>
  <description>Launch and config files for GO2 Nav2 YOLO demo</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>go2_description</exec_depend>
  <exec_depend>champ_bringup</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
